--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
 <!DOCTYPE html>
 <html lang="th">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เพิ่มรายการสินค้า</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 py-10">
-  <div class="max-w-xl mx-auto bg-white p-8 rounded-2xl shadow-xl">
-    <h1 class="text-2xl font-bold mb-6 text-center">เพิ่มรายการสินค้าใหม่</h1>
-    
-    <form action="/submit-product" method="POST" class="space-y-4">
-      <div>
-        <label for="name" class="block font-medium text-gray-700">ชื่อสินค้า</label>
-        <input type="text" id="name" name="name" required class="mt-1 w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500">
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ส่งข้อมูลสินค้า</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100 text-gray-800 p-6">
+    <div class="max-w-xl mx-auto bg-white p-6 rounded-2xl shadow-xl">
+      <h1 class="text-2xl font-bold mb-4 text-center">📦 เพิ่มรายการสินค้า</h1>
 
-      <div>
-        <label for="description" class="block font-medium text-gray-700">รายละเอียดสินค้า</label>
-        <textarea id="description" name="description" rows="4" class="mt-1 w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
-      </div>
+      <form id="productForm" class="space-y-4">
+        <input type="text" id="name" placeholder="ชื่อสินค้า" required class="w-full p-2 border rounded" />
+        <input type="text" id="description" placeholder="รายละเอียดสินค้า" class="w-full p-2 border rounded" />
+        <input type="number" id="price" placeholder="ราคา (บาท)" required class="w-full p-2 border rounded" />
+        <input type="text" id="category" placeholder="หมวดหมู่" class="w-full p-2 border rounded" />
+        <input type="url" id="image" placeholder="ลิงก์รูปภาพ" class="w-full p-2 border rounded" />
+        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded">ส่งข้อมูล</button>
+      </form>
 
-      <div>
-        <label for="price" class="block font-medium text-gray-700">ราคาสินค้า (บาท)</label>
-        <input type="number" id="price" name="price" required min="0" step="0.01" class="mt-1 w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <div id="msg" class="mt-4 text-green-600 font-semibold hidden text-center">
+        ✅ ส่งข้อมูลเรียบร้อยแล้ว!
       </div>
+    </div>
 
-      <div>
-        <label for="category" class="block font-medium text-gray-700">หมวดหมู่</label>
-        <select id="category" name="category" class="mt-1 w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500">
-          <option value="">-- เลือกหมวดหมู่ --</option>
-          <option value="electronics">อิเล็กทรอนิกส์</option>
-          <option value="clothing">เสื้อผ้า</option>
-          <option value="food">อาหาร</option>
-          <option value="other">อื่น ๆ</option>
-        </select>
-      </div>
+    <script>
+      const form = document.getElementById("productForm");
+      const msg = document.getElementById("msg");
 
-      <div>
-        <label for="image" class="block font-medium text-gray-700">ลิงก์รูปสินค้า</label>
-        <input type="url" id="image" name="image" placeholder="https://example.com/image.jpg" class="mt-1 w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500">
-      </div>
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
 
-      <div class="text-center pt-4">
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-xl hover:bg-blue-700 transition">บันทึกสินค้า</button>
-      </div>
-    </form>
-  </div>
-</body>
+        const data = {
+          name: document.getElementById("name").value,
+          description: document.getElementById("description").value,
+          price: document.getElementById("price").value,
+          category: document.getElementById("category").value,
+          image: document.getElementById("image").value,
+        };
+
+        try {
+          const res = await fetch("https://script.google.com/macros/s/AKfycbwBpMT5vLyAYmBZvn6EymWUggPrYF3Ddd24EeDHKZIUGozJDbyUv0nRa_uUDhYua9y71g/exec", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data),
+          });
+
+          if (res.ok) {
+            msg.classList.remove("hidden");
+            form.reset();
+          } else {
+            alert("เกิดข้อผิดพลาดในการส่งข้อมูล");
+          }
+        } catch (err) {
+          alert("ไม่สามารถเชื่อมต่อกับเซิร์ฟเวอร์ได้");
+        }
+      });
+    </script>
+  </body>
 </html>
