--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       </div>
     </div>
 
+    <!-- ตารางแสดงรายการจาก Google Sheets -->
+    <div class="max-w-5xl mx-auto mt-10 bg-white p-6 rounded-2xl shadow-xl">
+      <h2 class="text-xl font-bold mb-4 text-center">📋 รายการสินค้าจากชีต</h2>
+      <div class="overflow-x-auto">
+        <table id="sheetTable" class="min-w-full table-auto border border-gray-300 text-sm">
+          <!-- ตารางจะถูกสร้างโดย JavaScript -->
+        </table>
+      </div>
+    </div>
+
     <script>
       const form = document.getElementById("productForm");
       const msg = document.getElementById("msg");
@@ -56,6 +66,42 @@
           alert("ไม่สามารถเชื่อมต่อกับเซิร์ฟเวอร์ได้");
         }
       });
+
+      // ดึงข้อมูลจาก Google Sheets ที่คุณให้ไว้ (CSV → JSON)
+      async function fetchCSV() {
+        const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vQsNJ5QINNuD29AG1DkGlYdkpQ4N4AYinwSOUfR8qtOMH5DI54aYgzwIiNLYXvd6lmGnfH1arNbo9Mu/pub?gid=0&single=true&output=csv");
+        const csvText = await response.text();
+        const rows = csvText.trim().split('\n').map(row => row.split(','));
+        const table = document.getElementById('sheetTable');
+
+        // หัวตาราง
+        const thead = document.createElement('thead');
+        const headerRow = document.createElement('tr');
+        rows[0].forEach(headerText => {
+          const th = document.createElement('th');
+          th.textContent = headerText;
+          th.className = "border p-2 bg-gray-200";
+          headerRow.appendChild(th);
+        });
+        thead.appendChild(headerRow);
+        table.appendChild(thead);
+
+        // ข้อมูล
+        const tbody = document.createElement('tbody');
+        rows.slice(1).forEach(row => {
+          const tr = document.createElement('tr');
+          row.forEach(cell => {
+            const td = document.createElement('td');
+            td.textContent = cell;
+            td.className = "border p-2";
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        });
+        table.appendChild(tbody);
+      }
+
+      fetchCSV();
     </script>
   </body>
 </html>
