--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <script>
         document.getElementById('productForm').addEventListener('submit', function (e) {
-    e.preventDefault(); // ป้องกันการรีเฟรชหน้า
+    e.preventDefault(); // ป้องกันการโหลดหน้าใหม่
 
     const form = e.target;
     const data = {
@@ -47,7 +47,6 @@
       image: form.image.value.trim()
     };
 
-
     fetch('https://script.google.com/macros/s/AKfycbwBpMT5vLyAYmBZvn6EymWUggPrYF3Ddd24EeDHKZIUGozJDbyUv0nRa_uUDhYua9y71g/exec', {
       method: 'POST',
       mode: 'no-cors',
@@ -56,17 +55,16 @@
       },
       body: JSON.stringify(data)
     }).then(() => {
-      document.getElementById('msg').classList.remove('hidden');
-
-      // เคลียร์ฟอร์ม
+      // แสดงข้อความสำเร็จ
+      const msg = document.getElementById('msg');
+      msg.classList.remove('hidden');
       form.reset();
 
-      // ซ่อนข้อความหลัง 3 วินาที
       setTimeout(() => {
-        document.getElementById('msg').classList.add('hidden');
+        msg.classList.add('hidden');
       }, 3000);
     }).catch(error => {
-      console.error('Error:', error);
+      console.error('เกิดข้อผิดพลาด:', error);
     });
   });
       const form = document.getElementById("productForm");
