--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 text-gray-800 p-6">
+    <!-- ฟอร์มกรอกข้อมูล -->
     <div class="max-w-xl mx-auto bg-white p-6 rounded-2xl shadow-xl">
       <h1 class="text-2xl font-bold mb-4 text-center">📦 เพิ่มรายการสินค้า</h1>
 
@@ -16,7 +17,9 @@
         <input type="number" id="price" placeholder="ราคา (บาท)" required class="w-full p-2 border rounded" />
         <input type="text" id="category" placeholder="หมวดหมู่" class="w-full p-2 border rounded" />
         <input type="url" id="image" placeholder="ลิงก์รูปภาพ" class="w-full p-2 border rounded" />
-        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded">ส่งข้อมูล</button>
+        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded">
+          ส่งข้อมูล
+        </button>
       </form>
 
       <div id="msg" class="mt-4 text-green-600 font-semibold hidden text-center">
@@ -24,89 +27,60 @@
       </div>
     </div>
 
-    <!-- ตารางแสดงรายการจาก Google Sheets -->
+    <!-- ตารางแสดงข้อมูล -->
     <div class="max-w-5xl mx-auto mt-10 bg-white p-6 rounded-2xl shadow-xl">
       <h2 class="text-xl font-bold mb-4 text-center">📋 รายการสินค้าจากชีต</h2>
       <div class="overflow-x-auto">
         <table id="sheetTable" class="min-w-full table-auto border border-gray-300 text-sm">
-          <!-- ตารางจะถูกสร้างโดย JavaScript -->
+          <!-- ตารางจะถูกเติมโดย JS -->
         </table>
       </div>
     </div>
 
     <script>
-        document.getElementById('productForm').addEventListener('submit', function (e) {
-    e.preventDefault(); // ป้องกันการโหลดหน้าใหม่
-
-    const form = e.target;
-    const data = {
-      name: form.name.value.trim(),
-      description: form.description.value.trim(),
-      price: form.price.value.trim(),
-      category: form.category.value.trim(),
-      image: form.image.value.trim()
-    };
-
-    fetch('https://script.google.com/macros/s/AKfycbwBpMT5vLyAYmBZvn6EymWUggPrYF3Ddd24EeDHKZIUGozJDbyUv0nRa_uUDhYua9y71g/exec', {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify(data)
-    }).then(() => {
-      // แสดงข้อความสำเร็จ
-      const msg = document.getElementById('msg');
-      msg.classList.remove('hidden');
-      form.reset();
-
-      setTimeout(() => {
-        msg.classList.add('hidden');
-      }, 3000);
-    }).catch(error => {
-      console.error('เกิดข้อผิดพลาด:', error);
-    });
-  });
-      const form = document.getElementById("productForm");
-      const msg = document.getElementById("msg");
-
-      form.addEventListener("submit", async (e) => {
+      // ฟอร์มส่งข้อมูลไปยัง Web App
+      document.getElementById('productForm').addEventListener('submit', function (e) {
         e.preventDefault();
 
+        const form = e.target;
         const data = {
-          name: document.getElementById("name").value,
-          description: document.getElementById("description").value,
-          price: document.getElementById("price").value,
-          category: document.getElementById("category").value,
-          image: document.getElementById("image").value,
+          name: form.name.value.trim(),
+          description: form.description.value.trim(),
+          price: form.price.value.trim(),
+          category: form.category.value.trim(),
+          image: form.image.value.trim()
         };
 
-        try {
-          const res = await fetch("https://script.google.com/macros/library/d/1GnukuxtNk7hzB6pAUO0Q5mN70o3dEXmH1es1PenEm2Z84KCZec0fVCnW/1", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(data),
-          });
+        fetch('https://script.google.com/macros/s/AKfycbwBpMT5vLyAYmBZvn6EymWUggPrYF3Ddd24EeDHKZIUGozJDbyUv0nRa_uUDhYua9y71g/exec', {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(data)
+        }).then(() => {
+          const msg = document.getElementById('msg');
+          msg.classList.remove('hidden');
+          form.reset();
 
-          if (res.ok) {
-            msg.classList.remove("hidden");
-            form.reset();
-          } else {
-            alert("เกิดข้อผิดพลาดในการส่งข้อมูล");
-          }
-        } catch (err) {
-          alert("ไม่สามารถเชื่อมต่อกับเซิร์ฟเวอร์ได้");
-        }
+          setTimeout(() => {
+            msg.classList.add('hidden');
+            fetchCSV(); // รีโหลดตารางใหม่
+          }, 3000);
+        }).catch(error => {
+          console.error('เกิดข้อผิดพลาด:', error);
+        });
       });
 
-      // ดึงข้อมูลจาก Google Sheets ที่คุณให้ไว้ (CSV → JSON)
+      // ดึงข้อมูลจาก Google Sheet ที่เผยแพร่แบบ CSV
       async function fetchCSV() {
         const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vQsNJ5QINNuD29AG1DkGlYdkpQ4N4AYinwSOUfR8qtOMH5DI54aYgzwIiNLYXvd6lmGnfH1arNbo9Mu/pub?gid=0&single=true&output=csv");
         const csvText = await response.text();
         const rows = csvText.trim().split('\n').map(row => row.split(','));
         const table = document.getElementById('sheetTable');
+        table.innerHTML = '';
 
-        // หัวตาราง
+        // สร้างหัวตาราง
         const thead = document.createElement('thead');
         const headerRow = document.createElement('tr');
         rows[0].forEach(headerText => {
@@ -118,7 +92,7 @@
         thead.appendChild(headerRow);
         table.appendChild(thead);
 
-        // ข้อมูล
+        // สร้างแถวข้อมูล
         const tbody = document.createElement('tbody');
         rows.slice(1).forEach(row => {
           const tr = document.createElement('tr');
@@ -133,6 +107,7 @@
         table.appendChild(tbody);
       }
 
+      // โหลดข้อมูลทันทีเมื่อเปิดหน้า
       fetchCSV();
     </script>
   </body>
